integrated sqlite as db and updated controller and model files.Config has been added.App file has been updated
