# swagger.yml
@@ -14,7 +14,7 @@ basePath: /api
 paths:
   /people:
     get:
-      operationId: people.read_all
+      operationId: controller.people.read_all
       tags:
         - People
       summary: Read the entire list of people
@@ -33,7 +33,7 @@ paths:
       responses:
         200:
           description: Successfully read people list operation
-          schema:
+          schema: 
             type: array
             items:
               properties:
@@ -51,7 +51,7 @@ paths:
                   type: string
 
     post:
-      operationId: people.create
+      operationId: controller.people.create
       tags:
         - People
       summary: Create a person and add it to the people list
@@ -82,7 +82,7 @@ paths:
 
   /people/{lname}:
     get:
-      operationId: people.read_one
+      operationId: controller.people.read_one
       tags:
         - People
       summary: Read one person from the people list
@@ -112,7 +112,7 @@ paths:
                 type: string
 
     put:
-      operationId: people.update
+      operationId: controller.people.update
       tags:
         - People
       summary: Update a person in the people list
@@ -143,7 +143,7 @@ paths:
           description: Successfully updated person in people list
 
     delete:
-      operationId: people.delete
+      operationId: controller.people.delete
       tags:
         - People
       summary: Delete a person from the people list
